copyright: added my name to copyright notices in Cargo.toml files
Signed-off-by: Dominic Mulligan <dominic.p.mulligan@gmail.com>

--- a/libsupervisionary/Cargo.toml
+++ b/libsupervisionary/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name       = "libsupervisionary"
 version    = "0.1.0"
-authors    = ["The Veracruz development team"]
+authors    = ["The Veracruz development team", "Dominic Mulligan"]
 edition    = "2018"
 description = "Rust language support for interacting with the Supervisionary kernel."
