--- a/driver/Cargo.toml
+++ b/driver/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name       = "driver"
 version    = "0.1.0"
-authors    = ["The Veracruz development team"]
+authors    = ["The Veracruz development team", "Dominic Mulligan"]
 edition    = "2018"
 description = "The main driver application, which loads Wasm binaries and executes them."
 
