--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name        = "kernel"
 version     = "0.1.0"
-authors     = ["The Veracruz development team"]
+authors     = ["The Veracruz development team", "Dominic Mulligan"]
 edition     = "2018"
 description = "The Supervisionary kernel code."
 
