--- a/wasmi-bindings/Cargo.toml
+++ b/wasmi-bindings/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name        = "wasmi-bindings"
 version     = "0.1.0"
-authors     = ["The Supervisionary Development Team"]
+authors     = ["The Veracruz Development Team", "Dominic Mulligan"]
 edition     = "2018"
 description = "The WASMI bindings for the Supervisionary kernel."
 
