tests: added initial tests for in-built primitive terms
Signed-off-by: Dominic Mulligan <dominic.p.mulligan@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,10 @@ members = [
     "driver",
     "kernel",
     "libsupervisionary",
+    "tests/constant",
+    "tests/term",
     "tests/type",
     "tests/type_former",
-    "tests/constant",
     "wasmi-bindings"
 ]
 
