system-interface: added initial system interface access capabilities
Added generic trait for system access which abstracts over whether
Supervisionary is querying or manipulating the "real" users system or whether it
is manipulating a synthetic (or in memory) filesystem under its management.

Added the first two system calls for system access:

  - System.IO.Write for writing strings to `stdout`,
  - System.IO.WriteError for writing strings to `stderr`.

Added a simple pass through system access mode for direct access to the
underlying system, implementing the `SystemInterface` trait described above.

Updated `driver` to create a new pass-through system access object and feed it
to the `WasmiRuntimeState` appropriately.

Added tests for these system access functions.

Signed-off-by: Dominic Mulligan <dominic.p.mulligan@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,9 @@ members = [
     "driver",
     "kernel",
     "libsupervisionary",
+    "system-interface",
     "tests/constant",
+    "tests/system",
     "tests/term",
     "tests/type",
     "tests/type_former",
