--- a/wasmi-bindings/Cargo.toml
+++ b/wasmi-bindings/Cargo.toml
@@ -6,12 +6,13 @@ edition     = "2018"
 description = "The WASMI bindings for the Supervisionary kernel."
 
 [dependencies]
-byteorder   = "1.4.2"
-env_logger  = "0.8.2"
-kernel      = { path = "../kernel", features = ["wasmi-hosterror"] }
-lazy_static = "1.4.0"
-log         = "0.4.14"
-wasmi       = "0.9.0"
+byteorder        = "1.4.2"
+env_logger       = "0.8.2"
+kernel           = { path = "../kernel", features = ["wasmi-hosterror"] }
+lazy_static      = "1.4.0"
+log              = "0.4.14"
+system-interface = { path = "../system-interface" }
+wasmi            = "0.9.0"
 
 [profile.release]
 lto           = true
