tests: initial tests of theorem-related system calls
Implemented Theorem.Size system call which is used for allocating appropriate
buffers in user-space for holding dynamic content (e.g., free variables, the
premisses) of a theorem.

Added initial plumbing of Theorem.Register.Weaken system call for weakening
theorems with an additional premiss.

Demoted Theorem.Register.Truth.Introduction from a system call to a
preprovisioned primitive constant.  The premisses of truth introduction are now
fixed at the empty context, rather than being allowed to vary as a result of a
system call.

Fixed various bugs in `libsupervisionary` bindings to theorem-related system
calls.

Bumped version number of `clap` dependency in `driver`.

Updated `README.markdown` in `tests` with details of what is being tested in
each series of testbenches.

Added Makefile.toml for theorem tests.  Added new `theorem-integration-test`
workspace-level build target, and added as a new dependency to
`integration-tests` target.

Fixed issues highlighted by Clippy, and issues when generating `rustdoc`
documentation.

Signed-off-by: Dominic Mulligan <dominic.p.mulligan@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "tests/constant",
     "tests/system",
     "tests/term",
+    "tests/theorem",
     "tests/type",
     "tests/type_former",
     "wasmi-bindings"
