--- a/driver/Cargo.toml
+++ b/driver/Cargo.toml
@@ -7,7 +7,7 @@ description = "The main driver application, which loads Wasm binaries and execut
 
 [dependencies]
 anyhow           = "1.0.42"
-clap             = "3.0.0-beta.2"
+clap             = "3.2.23"
 env_logger       = "0.9.0"
 log              = "0.4.14"
 system-interface = { path = "../system-interface" }
