repository: stopped document generation for project dependencies
Added `--no-deps` to `cargo doc` targets to remove document generation for
project dependencies and speed up the generation process.

Signed-off-by: Dominic Mulligan <dominic.p.mulligan@gmail.com>

--- a/tests/constant/Makefile.toml
+++ b/tests/constant/Makefile.toml
@@ -32,7 +32,7 @@ args          = ["fmt"]
 description   = "Generates rustdoc documentation from the constant tests source code."
 install_crate = "rustdoc"
 command       = "cargo"
-args          = ["doc"]
+args          = ["doc", "--no-deps"]
 
 [tasks.all]
 description  = "Build, lint, format, and test the Supervisionary constant tests"
