--- a/tests/theorem/Makefile.toml
+++ b/tests/theorem/Makefile.toml
@@ -32,7 +32,7 @@ args          = ["fmt"]
 description   = "Generates rustdoc documentation from the theorem tests source code."
 install_crate = "rustdoc"
 command       = "cargo"
-args          = ["doc"]
+args          = ["doc", "--no-deps"]
 
 [tasks.all]
 description  = "Build, lint, format, and test the Supervisionary theorem tests"
