system-interface: reworked the system interface
Reworked Supervisionary system interface.  Added:
- fopen and fclose: for opening and closing filehandles,
- fread and fwrite: for reading and writing from a filehandle,

Added distinguished file handles: stdout, stdin, and stderr, with I/O on these
filehandles just using the functions above.

More to come...

Signed-off-by: Dominic Mulligan <dominic.p.mulligan@gmail.com>

--- a/system-interface/Cargo.toml
+++ b/system-interface/Cargo.toml
@@ -6,3 +6,5 @@ edition     = "2018"
 description = "A system interface for querying and manipulating the system."
 
 [dependencies]
+log = "0.4.17"
+nix = "0.26.2"
